## make log:

# ./boot/ocamlrun ./boot/ocamlc
# -nostdlib -use-prims -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats

# ./boot/ocamlrun ./ocamlopt
# -nostdlib -g -strict-sequence -principal -absname -w +a-4-9-40-41-42-44-45-48 -warn-error +a -bin-annot -strict-formats

load("//bzl:rules.bzl",
     "boot_archive",
     "boot_library",
     "compiler_module",
     "compiler_signature",
)
load("//lex:BUILD_RULES.bzl", "run_ocamllex")

MODULE_OPTS = []
SIG_OPTS    = []

exports_files([
    "ast_helper.mli", "ast_helper.ml",
    "ast_mapper.mli", "ast_mapper.ml",
    "asttypes.mli",
    "attr_helper.mli", "attr_helper.ml",
    "builtin_attributes.mli", "builtin_attributes.ml",
    "docstrings.mli", "docstrings.ml",
    "location.mli", "location.ml",
    "longident.mli", "longident.ml",
    "parsetree.mli",
    "syntaxerr.mli", "syntaxerr.ml",
])

################################################################
# Menhir: the makefiles rename the menhir sources to avoid name
# clashes in case users also use menhir. we use genrules to do the
# same here. an alternative is to put them in a namespace, so instead
# of //parsing:CamlinternalMenhirLib we would have something like
# //boot/menhir:Ocaml.MenhirLib

boot_library(
# boot_archive(
    name = "parsing",
    manifest  = [
        ":Ast_helper",
        ":Ast_invariants",
        ":Ast_iterator",
        ":Ast_mapper",
        ":Attr_helper",
        ":Builtin_attributes",
        ":CamlinternalMenhirLib",
        ":Depend",
        ":Docstrings",
        ":Lexer",
        ":Location",
        ":Longident",
        ":Parse",
        ":Parser",
        ":Pprintast",
        ":Printast",
        ":Syntaxerr",
    ],
    visibility = ["//compilerlibs:__pkg__"]
)

# boot_archive(
boot_library(
    name = "ocamlcommon",
    manifest  = [
        ":Ast_helper",
        ":Ast_invariants",
        ":Ast_iterator",
        ":Ast_mapper",
        ":Attr_helper",
        ":Builtin_attributes",
        ":CamlinternalMenhirLib",
        ":Depend",
        ":Docstrings",
        ":Lexer",
        ":Location",
        ":Longident",
        ":Parse",
        ":Parser",
        ":Pprintast",
        ":Printast",
        ":Syntaxerr",
    ],
    visibility = ["//compilerlibs:__pkg__"]
)

################################################################
compiler_module(
    name   = "Ast_helper",
    struct = "ast_helper.ml",
    sig    = "Ast_helper_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Int32",
        "//stdlib:Stdlib.Int64",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Nativeint",
        "//utils:Misc",
        ":Docstrings",
        ":Location",
        ":Longident",
        ":Syntaxerr",
    ],
    visibility = [
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Ast_helper_cmi",
    src  = "ast_helper.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Asttypes_cmi",
        ":Docstrings_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Parsetree_cmi",
    ],
    visibility = [
        "//typing:__pkg__"
        ]
)

compiler_module(
    name   = "Ast_invariants",
    struct = "ast_invariants.ml",
    sig    = "Ast_invariants_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.List",
        ":Ast_iterator",
        ":Builtin_attributes",
        ":Longident",
        ":Syntaxerr",
    ],
    visibility = ["//driver:__pkg__"]
)

compiler_signature(
    name = "Ast_invariants_cmi",
    src  = "ast_invariants.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Asttypes_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Ast_iterator",
    struct = "ast_iterator.ml",
    sig    = "Ast_iterator_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.List",
        ":Location",
    ],
    visibility = [
        "//tools:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Ast_iterator_cmi",
    src  = "ast_iterator.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Ast_mapper",
    struct = "ast_mapper.ml",
    sig    = "Ast_mapper_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Array",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printexc",
        "//stdlib:Stdlib.Printf",
        "//stdlib:Stdlib.Sys",
        "//utils:Clflags",
        "//config:Config",
        "//utils:Load_path",
        "//utils:Misc",
        ":Ast_helper",
        ":Location",
        ":Longident",
    ],
    visibility = [
        "//driver:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Ast_mapper_cmi",
    src  = "ast_mapper.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Asttypes_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_signature(
    name = "Asttypes_cmi",
    src  = "asttypes.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//lambda:__pkg__",
        "//middle_end:__subpackages__",
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__subpackages__",
        "//typing:__pkg__"
    ]
)

compiler_module(
    name   = "Attr_helper",
    struct = "attr_helper.ml",
    sig    = "Attr_helper_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        ":Location",
    ],
    visibility = [
        "//otherlibs/dynlink:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Attr_helper_cmi",
    src  = "attr_helper.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Asttypes_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Builtin_attributes",
    struct = "builtin_attributes.ml",
    sig    = "Builtin_attributes_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Arg",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Printf",
        "//utils:Misc",
        "//utils:Warnings",
        ":Location",
        ":Longident",
    ],
    visibility = [
        "//driver:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Builtin_attributes_cmi",
    src  = "builtin_attributes.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//utils:Misc_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Asttypes_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Depend",
    struct = "depend.ml",
    sig    = "Depend_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//utils:Clflags",
        "//utils:Misc",
        ":Builtin_attributes",
        ":Location",
        ":Longident",
    ],
    visibility = ["//driver:__pkg__"]
)

compiler_signature(
    name = "Depend_cmi",
    src  = "depend.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//utils:Misc_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Asttypes_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Docstrings",
    struct = "docstrings.ml",
    sig    = "Docstrings_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Hashtbl",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//utils:Warnings",
        ":Location",
    ],
    visibility = [
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__"
    ]
)

compiler_signature(
    name = "Docstrings_cmi",
    src  = "docstrings.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//stdlib:Stdlib.Lazy_cmi",
        "//stdlib:Stdlib.Lexing_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "CamlinternalMenhirLib",
    struct = "camlinternalMenhirLib.ml",
    sig    = "CamlinternalMenhirLib_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lazy",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Printf",
    ],
    visibility = ["//tools:__pkg__"]
)

genrule(
    name = "camlinternalMenhirLib_ml",
    outs = ["camlinternalMenhirLib.ml"],
    srcs = ["//boot/menhir:menhirLib.ml"],
    cmd  = "\n".join([
	    "cp $(location //boot/menhir:menhirLib.ml) $@"
    ])
)

compiler_signature(
    name   = "CamlinternalMenhirLib_cmi",
    src    = "camlinternalMenhirLib.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lazy_cmi",
        "//stdlib:Stdlib.Lexing_cmi",
        "//stdlib:Stdlib.Obj_cmi",
    ]
)

genrule(
    name = "camlinternalMenhirLib_mli",
    outs = ["camlinternalMenhirLib.mli"],
    srcs = ["//boot/menhir:menhirLib.mli"],
    cmd  = "\n".join([
        "echo '[@@@ocaml.warning \"-67\"]' > $@;",
	    "cat $(location //boot/menhir:menhirLib.mli) >> $@"
    ])
)

compiler_module(
    name   = "Lexer",
    struct = "lexer.ml",
    sig    = "Lexer_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lexing",
        "//utils:Misc",
        ":Parser"
    ],
    visibility = [
        "//driver:__pkg__",
        "//file_formats:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
    ]
)

run_ocamllex(
    name = "lexer_ml",
    src  = "lexer.mll",
    out  = "lexer.ml",
)

compiler_signature(
    name = "Lexer_cmi",
    src  = "lexer.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lexing",
        ":Parser_cmi"
    ]
)

compiler_module(
    name   = "Location",
    struct = "location.ml",
    sig    = "Location_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib",
        "//stdlib:Stdlib.Buffer",
        "//stdlib:Stdlib.Bytes",
        "//stdlib:Stdlib.Filename",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Int",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.Parsing",
        "//stdlib:Stdlib.String",
        "//stdlib:Stdlib.Sys",
        "//utils:Build_path_prefix_map",
        "//utils:Clflags",
        "//utils:Misc",
        "//utils:Terminfo",
        "//utils:Warnings",
    ],
    visibility = [
        "//asmcomp:__pkg__",
        "//bytecomp:__pkg__",
        "//debugger:__pkg__",
        "//driver:__pkg__",
        "//file_formats:__pkg__",
        "//lambda:__pkg__",
        "//middle_end:__subpackages__",
        "//ocamltest:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__subpackages__",
        "//typing:__pkg__",

        "//testsuite:__subpackages__"
    ],
)

compiler_signature(
    name = "Location_cmi",
    src  = "location.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Buffer_cmi",
        "//stdlib:Stdlib.Format_cmi",
        "//stdlib:Stdlib.Lexing_cmi",
        "//utils:Warnings_cmi",
    ],
    visibility = [
        "//bytecomp:__pkg__",
        "//file_formats:__pkg__",
        "//lambda:__pkg__",
        "//ocamltest:__pkg__",
        "//toplevel:__subpackages__",
        "//typing:__pkg__",

        "//testsuite:__subpackages__"
    ]
)

compiler_module(
    name   = "Longident",
    struct = "longident.ml",
    sig    = "Longident_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.String",
        "//utils:Misc",
    ],
    visibility = [
        "//debugger:__pkg__",
        "//lambda:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
        "//toplevel/byte:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Longident_cmi",
    src  = "longident.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib_cmi",
       "//stdlib:Stdlib.Format_cmi"
    ],
    visibility = [
        "//debugger:__pkg__",
        "//toplevel:__subpackages__",
        "//typing:__pkg__"
    ]
)

compiler_module(
    name   = "Parse",
    struct = "parse.ml",
    sig    = "Parse_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Lexing",
        ":Docstrings",
        ":Lexer",
        ":Location",
        ":Parser",
        ":Pprintast",
        ":Syntaxerr",
    ],
    visibility = [
        "//driver:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Parse_cmi",
    src  = "parse.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        "//stdlib:Stdlib.Lexing_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Parser",
    struct = "parser.ml",
    sig    = "Parser_cmi",
    opts = MODULE_OPTS + ["-w", "-40"],
    deps   = [
        ":Ast_helper",
        ":CamlinternalMenhirLib",
        "//stdlib:Stdlib.Parsing",
    ],
    visibility = [
        "//driver:__pkg__",
        "//tools:__pkg__",
    ]
)

# parsing/parser.ml: boot/menhir/parser.ml parsing/parser.mly \
#   tools/check-parser-uptodate-or-warn.sh
# 	@-tools/check-parser-uptodate-or-warn.sh
# 	sed "s/MenhirLib/CamlinternalMenhirLib/g" $< > $@

genrule(
    name = "parser_ml",
    outs  = ["parser.ml"],
    srcs  = [
        "//:VERSION",
        "//boot/menhir:parser.ml",
        "//tools:check-parser-uptodate-or-warn.sh",
        "parser.mly"
    ],
    cmd  = "\n".join([
        "$(location //tools:check-parser-uptodate-or-warn.sh) \\ ",
	    "sed \"s/MenhirLib/CamlinternalMenhirLib/g\" " +
        "$(location //boot/menhir:parser.ml) > $@"
    ])
)

compiler_signature(
    name = "Parser_cmi",
    src  = "parser.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Lexing_cmi",
        ":CamlinternalMenhirLib_cmi",
        ":Docstrings_cmi",
        ":Location_cmi"
    ]
)

genrule(
    name = "parser_mli",
    outs  = ["parser.mli"],
    srcs  = [
        "//boot/menhir:parser.mli",
    ],
    cmd  = "\n".join([
	    "sed \"s/MenhirLib/CamlinternalMenhirLib/g\" " +
        "$(location //boot/menhir:parser.mli) > $@"
    ])
)

compiler_signature(
    name = "Parsetree_cmi",
    src  = "parsetree.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Asttypes_cmi",
        ":Location_cmi",
        ":Longident_cmi",
    ],
    visibility = [
        "//driver:__pkg__",
        "//lambda:__pkg__",
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__subpackages__",
        "//typing:__pkg__",
        "//testsuite:__subpackages__"
    ]
)

compiler_module(
    name   = "Pprintast",
    struct = "pprintast.ml",
    sig    = "Pprintast_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.String",
        ":Ast_helper",
        ":Location",
        ":Longident",
    ],
    visibility = [
        "//driver:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__",
        "//typing:__pkg__"
    ]
)

compiler_signature(
    name = "Pprintast_cmi",
    src  = "pprintast.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Asttypes_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Printast",
    struct = "printast.ml",
    sig    = "Printast_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Char",
        "//stdlib:Stdlib.Format",
        "//stdlib:Stdlib.Lexing",
        "//stdlib:Stdlib.List",
        "//stdlib:Stdlib.Option",
        "//stdlib:Stdlib.String",
        "//utils:Clflags",
        ":Location",
        ":Longident",
        ":Pprintast",
    ],
    visibility = [
        "//driver:__pkg__",
        "//toplevel:__pkg__",
        "//typing:__pkg__",
        "//testsuite:__subpackages__"
    ]
)

compiler_signature(
    name = "Printast_cmi",
    src  = "printast.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
        ":Longident_cmi",
        ":Asttypes_cmi",
        ":Parsetree_cmi",
    ]
)

compiler_module(
    name   = "Syntaxerr",
    struct = "syntaxerr.ml",
    sig    = "Syntaxerr_cmi",
    opts = MODULE_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format",
        ":Location",
    ],
    visibility = [
        "//otherlibs/dynlink:__pkg__",
        "//tools:__pkg__",
        "//toplevel:__pkg__"
    ]
)

compiler_signature(
    name = "Syntaxerr_cmi",
    src  = "syntaxerr.mli",
    opts = SIG_OPTS,
    deps   = [
        "//stdlib:Stdlib.Format_cmi",
        ":Location_cmi",
    ]
)

