load("//bzl:rules.bzl", "promote")

promote(
    name = "promote",
    srcs  = ["//runtime:ocamlc", "//boot/bin:ocamlrun"],
    dst  = "tmp/boot",
    # deps = [":common"]
)

# root Makefile:
# LIBFILES=stdlib.cma std_exit.cmo *.cmi camlheader
# promote-common:
# 	$(PROMOTE) ocamlc$(EXE) boot/ocamlc
# 	$(PROMOTE) lex/ocamllex$(EXE) boot/ocamllex
# 	cd stdlib; cp $(LIBFILES) ../boot
promote(
    name = "common",
    srcs  = ["//runtime:ocamlc", "//lex:ocamllex"],
    dst  = "tmp/boot",
)

promote(
    name = "stdlib",
    srcs  = ["//stdlib:cmigroup"],
    dst  = "tmp/boot",
)

promote(
    name = "ocamlc",
    srcs  = ["//runtime:ocamlc"],
    dst  = "tmp/boot",
)

promote(
    name = "ocamlrun",
    srcs  = ["//boot/bin:ocamlrun"],
    dst  = "tmp/boot",
)
